[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "a2squery"
version = "0.0.1"
authors = [
  { name="Liam (linKhehe) Henderson" },
]
description = "A2SQuery is a python implementation of Valve's A2S protocol."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/linKhehe/a2squery"
